# AndroidTestCase

./: .gitignore  README.md  build.gradle
app/: CMakeLists.txt  app-release_signinfo.txt  build.gradle
app/libs/: netease-antihijack-lib-release.aar  neteasesafekeyboard.aar
app/src/jni/: Android.mk  Application.mk  build.bat  clean.bat  crashAnalysis.txt  debug.bat  hooktest.ncb  jni.vcxproj  jni.vcxproj.filters  jniTest2008.sln  jniTest2017.sln  ndk.bat  run.bat  runTestApp.bat
app/src/jni/dalvik/: dalvik.h
app/src/jni/src/: ArtBridge.cpp  ArtBridge.h  Common.cpp  Common.h  Constant.h  DalvikBridge.cpp  DalvikBridge.h  MethodLogger.cpp  MethodLogger.h  TimeLog.cpp  TimeLog.h  Utils.cpp  Utils.h  common.h  debug.h  header.h  jni.vcproj  jni.vcxproj  jni.vcxproj.filters  main.cpp  test.cpp
app/src/jni/src/Debug/: BuildLog.htm
app/src/jni/src/art/: art.cpp  art.h  art_6_0.h  art_method_replace_5_0.cxx
app/src/jni/src/dalvik/: dalvik.cpp  dalvik.h  dalvik_core.h  dalvik_method_dispatch.cpp  dalvik_method_replace.cpp  object.h
app/src/jni/substrate/: substrate.h
app/src/main/: AndroidManifest.xml
app/src/main/assets/: sample.html  test.lua  xposed_init
app/src/main/assets/lua/: import.lua
app/src/main/cpp/: ArtBridge.h  Bridge.h  Constant.h  DalvikBridge.cpp  DalvikBridge.h  DeviceInfo.cpp  DeviceInfo.h  MethodLogger.cpp  MethodLogger.h  Patch.cpp  TimeLog.cpp  TimeLog.h  Utils.cpp  Utils.h  common.h  debug.h  header.h  jni.vcxproj.filters  main.cpp
app/src/main/cpp/3rd/: injectso
app/src/main/cpp/art/: art.cpp  art.h  art_5_0.h  art_5_1.h  art_6_0.h  art_method_dispatch.cpp  art_method_replace.cpp  art_method_replace_5_0.cxx  art_method_replace_5_1.cxx  art_method_replace_6_0.cxx  art_quick_dexposed_invoke_handler.S  asm_support_arm.h
app/src/main/cpp/dalvik/: dalvik.cpp  dalvik.h  dalvik_core.h  dalvik_method_dispatch.cpp  object.h
app/src/main/cpp/demo/: Demo.cpp  Demo.h
app/src/main/cpp/include/cutils/: log.h
app/src/main/cpp/libcutils/: properties.c
app/src/main/cpp/substrate/: substrate.h
app/src/main/java/android/os/: SystemProperties.java
app/src/main/java/android/widget/: FloatButton.java  FootView.java  HeadView.java  PullingLayout.java  (+1 more)
app/src/main/res/layout/: activity_h5.xml  activity_main.xml  activity_recycler_view.xml
app/src/main/res/values/: strings.xml  styles.xml
(+75 files in other folders)
